fix: Bug in cropper popin if not ratio define

--- a/Resources/assets/styles/components/popin.scss
+++ b/Resources/assets/styles/components/popin.scss
@@ -148,6 +148,7 @@
         @include align-items(flex-end);
         @include align-content(flex-end);
         @include justify-content(center);
+        pointer-events: none;
         height: 5rem;
         padding: 1rem 2rem 1rem;
         position:absolute;
@@ -173,6 +174,7 @@
         @include align-items(flex-start);
         @include align-content(flex-start);
         @include justify-content(center);
+        pointer-events: none;
         position:absolute;
         z-index:10;
         bottom:0;
@@ -185,6 +187,7 @@
           @include align-items(center);
           @include align-content(center);
           @include justify-content(center);
+          pointer-events: auto;
           li {
             @include flex-display();
             @include align-items(center);
